--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
               secondary: "#FFF9F4",
               customGray: "",
             },
+            backgroundImage: {
+              "custom-gradient":
+                "linear-gradient(134.71deg, rgb(248, 204, 251) 1.286%, rgb(172, 210, 253) 100%)",
+            },
 
             //
           },
@@ -62,11 +66,11 @@
       };
     </script>
   </head>
-  <body class="font-sora max-w-screen-2xl mx-auto">
+  <body class="font-sora max-w-screen-2xl px-4 lg:px-8 mx-auto">
     <!-- header section -->
     <header>
-      <nav class="bg-[#FFF9F4] pt-6 pb-6 w-full">
-        <div class="flex justify-between items-center w-[80%] mx-auto">
+      <nav class="bg-[#FFF9F4] pt-6 pb-6 w-full px-0">
+        <div class="flex justify-between items-center mx-auto">
           <!-- logo header -->
           <div class="flex space-x-3 items-center">
             <div>
@@ -255,29 +259,40 @@
         </div>
       </section>
       <!-- trenending pet products section -->
-      <section class="bg-secondary">
-        <h3>Trending Pet Products</h3>
+      <section class="bg-secondary mt-56 pt-64">
+        <h3 class="mb-6 font-bold fontFamily:adlam">Trending Pet Products</h3>
         <!-- cards -->
         <div>
           <div class="grid grid-cols-2 gap-4 sm:grid-cols-5 sm:grid-rows-6">
             <!-- big-card -->
             <div
-              class="rounded-xl col-span-2 row-span-3 sm:col-span-2 sm:row-span-3 border bg-primary"
+              class="rounded-xl col-span-2 row-span-3 sm:col-span-2 sm:row-span-3 border bg-primary h-[402px]"
             >
-              <h3>T-Shirt For Dogs</h3>
-              <p>
-                Discover a world of treats, toys, and essentials handpicked for
-                your pets.
-              </p>
-              <span>Shop Now</span>
-              <img src="assets/cute-pet-small.png" alt="" />
+              <div class="relative py-10">
+                <div class="px-4 py-6">
+                  <h3 class="font-bold mt-2">T-Shirt For Dogs</h3>
+                  <p class="text-gray-600 mt-2">
+                    Discover a world of treats, toys,<br />
+                    and essentials handpicked for your pets.
+                  </p>
+
+                  <span class="px-4 py-2 bg-white inline-block mt-3"
+                    >Shop Now</span
+                  >
+                </div>
+                <div class="absolute right-0 bottom-0 top-20">
+                  <img src="assets/cute-pet-small.png" alt="" />
+                </div>
+              </div>
             </div>
 
             <!-- small-cards -->
             <div
               class="rounded-xl border bg-white flex items-center gap-5 px-2"
             >
-              <div><img src="assets/dog-cartoon.png" alt="" /></div>
+              <div class="bg-secondary px-2 rounded">
+                <img src="assets/dog-cartoon.png" alt="" />
+              </div>
               <div>
                 <span><i class="fas fa-star text-yellow-300"></i></span>
                 <span>4.5</span>
@@ -288,7 +303,9 @@
             <div
               class="rounded-xl border bg-white flex items-center gap-5 px-2"
             >
-              <div><img src="assets/fish-cartoon.png" alt="" /></div>
+              <div class="bg-secondary px-2 rounded">
+                <img src="assets/fish-cartoon.png" alt="" />
+              </div>
               <div>
                 <span><i class="fas fa-star text-yellow-300"></i></span>
                 <span>4.5</span>
@@ -299,7 +316,9 @@
             <div
               class="rounded-xl border bg-white flex items-center gap-5 px-2"
             >
-              <div><img src="assets/bird-cartoon.png" alt="" /></div>
+              <div class="bg-secondary px-2 rounded">
+                <img src="assets/bird-cartoon.png" alt="" />
+              </div>
               <div>
                 <span><i class="fas fa-star text-yellow-300"></i></span>
                 <span>4.5</span>
@@ -310,7 +329,9 @@
             <div
               class="rounded-xl border bg-white flex items-center gap-5 px-2"
             >
-              <div><img src="assets/rabbit-cartoon.png" alt="" /></div>
+              <div class="bg-secondary px-2 rounded">
+                <img src="assets/rabbit-cartoon.png" alt="" />
+              </div>
               <div>
                 <span><i class="fas fa-star text-yellow-300"></i></span>
                 <span>4.5</span>
@@ -321,7 +342,9 @@
             <div
               class="rounded-xl border bg-white flex items-center gap-5 px-2"
             >
-              <div><img src="assets/bird-cartoon.png" alt="" /></div>
+              <div class="bg-secondary px-2 rounded">
+                <img src="assets/bird-cartoon.png" alt="" />
+              </div>
               <div>
                 <span><i class="fas fa-star text-yellow-300"></i></span>
                 <span>4.5</span>
@@ -332,7 +355,9 @@
             <div
               class="rounded-xl bg-white border flex items-center gap-5 px-2"
             >
-              <div><img src="assets/pet-couch.png" alt="" /></div>
+              <div class="bg-secondary px-2 rounded">
+                <img src="assets/pet-couch.png" alt="" />
+              </div>
               <div>
                 <span><i class="fas fa-star text-yellow-300"></i></span>
                 <span>4.5</span>
@@ -343,7 +368,9 @@
             <div
               class="rounded-xl bg-white border flex items-center gap-5 px-2"
             >
-              <div><img src="assets/fish-cartoon.png" alt="" /></div>
+              <div class="bg-secondary px-2 rounded">
+                <img src="assets/fish-cartoon.png" alt="" />
+              </div>
               <div>
                 <span><i class="fas fa-star text-yellow-300"></i></span>
                 <span>4.5</span>
@@ -354,7 +381,9 @@
             <div
               class="rounded-xl bg-white border flex items-center gap-5 px-2"
             >
-              <div><img src="assets/pet-couch.png" alt="" /></div>
+              <div class="bg-secondary px-2 rounded">
+                <img src="assets/pet-couch.png" alt="" />
+              </div>
               <div>
                 <span><i class="fas fa-star text-yellow-300"></i></span>
                 <span>4.5</span>
@@ -363,9 +392,11 @@
               </div>
             </div>
             <div
-              class="rounded-xl border flex items-center bg-white gap-5 px-2"
+              class="rounded-xl border flex items-center lg:block sm:hidden bg-white gap-5 px-2"
             >
-              <div><img src="assets/rabbit-cartoon.png" alt="" /></div>
+              <div class="bg-secondary px-2 rounded">
+                <img src="assets/rabbit-cartoon.png" alt="" />
+              </div>
               <div>
                 <span><i class="fas fa-star text-yellow-300"></i></span>
                 <span>4.5</span>
@@ -378,11 +409,63 @@
       </section>
       <!-- Everyday low price -->
       <section>
-        <div>
-          <p>Under Price</p>
-          <h3>Pet Grooming Mitt</h3>
-          <p>(Easy Hair Removal)</p>
-          <span>$7.99</span>
+        <div class="flex flex-wrap gap-2 sm:gap-[calc(1%-5px)]">
+          <!-- first card -->
+          <div
+            class="w-full sm:w-[59%] bg-custom-gradient h-[480px] px-4 py-2 flex items-center justify-center gap-10 rounded-xl"
+          >
+            <div class="">
+              <p class="text-gray-400 sm:hidden md:block mb-2">Under Price</p>
+              <h3 class="font-bold">Pet Grooming Mitt</h3>
+              <p class="text-white sm:hidden md:block mt-4">
+                (Easy Hair Removal)
+              </p>
+              <span class="text-2xl font-extrabold inline-block mt-4"
+                >$7.99</span
+              >
+            </div>
+            <!-- second card -->
+            <div class="">
+              <img src="assets/cute-dog-mid.png" alt="" />
+            </div>
+          </div>
+          <div
+            class="w-full sm:w-[40%] bg-gradient-to-r from-cyan-500 to-blue-500 flex items-center justify-center relative gap-10 rounded-xl"
+          >
+            <div class="absolute top-0 left-0 p-4">
+              <h3 class="font-bold fontFamily">T-Shirt for Dogs</h3>
+              <span class="text-2xl font-extrabold text-yellow-300"
+                >$ 7.99</span
+              >
+            </div>
+
+            <div>
+              <img src="assets/cute-pet-mid.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <!-- get-pasome news card -->
+        <div
+          class="flex items-center px-4 py-5 gap-8 flex-col sm:flex-row bg-secondary rounded-xl mt-10"
+        >
+          <div>
+            <img src="assets/cute-pet-mid.png" alt="" />
+          </div>
+          <div>
+            <h3 class="fontFamily font-bold text-xl mb-2">Get Pawsome News!</h3>
+            <p class="text-gray-500 mb-2">
+              Exclusive training tips, ticks, product deals and more.
+            </p>
+            <input
+              class="bg-white rounded px-3 py-2 w-4/5 mt-4"
+              type="email "
+              placeholder="Enter email...."
+            />
+            <br />
+            <button class="bg-yellow-200 px-4 py-2 rounded mt-4">
+              Subscribe
+            </button>
+          </div>
         </div>
       </section>
     </main>
